# Sydar_AI

./: .gitignore  CLAUDE.md  README.md  SETUP.md  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: Button.tsx  FaqItem.tsx  FreshnessBadge.tsx  FridgeShelf.tsx  HowItWorksFlow.tsx  Section.tsx  SpotsCounter.tsx  WaitlistForm.tsx
app/success/: page.tsx
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  entities.py  enums.py  schemas.py
backend/app/routers/: alerts.py  ingest.py  inventory.py  recipes.py  shopping.py
backend/app/seed/: catalog.json  recipes.json
backend/app/services/: alerts.py  freshness.py  inventory.py  recipe_search.py  recipes.py  shopping.py
backend/app/vision/: __init__.py  base.py  claude_provider.py  gemini_provider.py  mock_provider.py
backend/samples/: README.md  fridge_expiring.expected.json  fridge_full.expected.json  fridge_low.expected.json
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_alerts.py  test_freshness.py  test_gemini_provider.py  test_inventory.py  test_mock_provider.py  test_recipe_search.py  test_recipes.py  test_shopping.py
docs/context/: README.md  brand-voice.md  design-rules.md  pmf-landing-page.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FreshnessBadge.tsx  (+3 more)
landing/: package-lock.json
(+11 files in other folders)
