[project]
name = "fridge-platform-backend"
version = "0.1.0"
description = "Phase 1 software platform for a fridge Hardware-as-a-Service product"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/vision/claude_provider.py",
    "app/vision/gemini_provider.py",
    "app/main.py",
]
